--- a/package.json
+++ b/package.json
@@ -9,11 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.22.5",
+    "@expo-google-fonts/dev": "^0.2.3",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/base": "4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.18",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.1.1",
+    "expo-modules-autolinking": "^1.2.0",
+    "expo-secure-store": "^12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "^0.71.11",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.21.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
