--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/slider": "^4.4.2",
+    "@react-native-firebase/analytics": "^18.1.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -27,6 +28,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
+    "expo-build-properties": "~0.6.0",
     "expo-font": "~11.1.1",
     "expo-modules-autolinking": "^1.2.0",
     "expo-secure-store": "^12.1.1",
@@ -35,8 +37,8 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-flip-toggle-button": "^1.0.9",
-    "react-native-gesture-handler": "^2.12.0",
-    "react-native-reanimated": "^3.3.0",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
