--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "expo-secure-store": "^12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.23.0",
+    "firebase": "10.3.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-flip-toggle-button": "^1.0.9",
